<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2023 Pachli Association
  ~
  ~ This file is a part of Pachli.
  ~
  ~ This program is free software; you can redistribute it and/or modify it under the terms of the
  ~ GNU General Public License as published by the Free Software Foundation; either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ Pachli is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
  ~ Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with Pachli; if not,
  ~ see <http://www.gnu.org/licenses>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/filter"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/notification_log_filter_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_filter"
        android:text="@string/notification_log_filter"/>

    <Button
        android:id="@+id/download"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/notification_log_download_content_description"
        app:layout_constraintStart_toEndOf="@id/filter"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/baseline_download"
        android:text="@string/notification_log_download" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sort"
        style="@style/Widget.Material3.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/download"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/download"
        android:text="@string/notification_log_sort" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter"
        android:paddingTop="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
