<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textDirection="anyRtl"
    tools:context="app.pachli.feature.about.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textIsSelectable="true"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Pachli Test" />

        <TextView
            android:id="@+id/deviceInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/text_content_margin"
            android:layout_marginEnd="@dimen/text_content_margin"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_device_info_title"
            android:textIsSelectable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/versionTextView"
            tools:text="Your device" />

        <TextView
            android:id="@+id/deviceInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:lineSpacingMultiplier="1.1"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="@+id/deviceInfoTitle"
            app:layout_constraintStart_toStartOf="@+id/deviceInfoTitle"
            app:layout_constraintTop_toBottomOf="@id/deviceInfoTitle" />

        <TextView
            android:id="@+id/accountInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_account_info_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textIsSelectable="true"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/copyDeviceInfo"
            app:layout_constraintStart_toStartOf="@+id/deviceInfo"
            app:layout_constraintTop_toBottomOf="@id/deviceInfo"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/accountInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:lineSpacingMultiplier="1.1"
            android:textIsSelectable="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/accountInfoTitle"
            app:layout_constraintStart_toStartOf="@+id/accountInfoTitle"
            app:layout_constraintTop_toBottomOf="@id/accountInfoTitle"
            tools:text="\@Pachli@mastodon.social\nVersion: xxx"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/copyDeviceInfo"
            style="@style/AppImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/about_copy"
            android:layout_marginEnd="@dimen/text_content_margin"
            app:layout_constraintBottom_toBottomOf="@+id/accountInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_content_copy_24" />

        <TextView
            android:id="@+id/about_powered_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_powered_by_pachli"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="@+id/copyDeviceInfo"
            app:layout_constraintStart_toStartOf="@+id/deviceInfo"
            app:layout_constraintTop_toBottomOf="@+id/accountInfo" />

        <app.pachli.core.ui.ClickableSpanTextView
            android:id="@+id/aboutLicenseInfoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hyphenationFrequency="full"
            android:lineSpacingMultiplier="1.2"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="@+id/copyDeviceInfo"
            app:layout_constraintStart_toStartOf="@+id/accountInfo"
            app:layout_constraintTop_toBottomOf="@id/about_powered_by"
            tools:text="@string/about_pachli_license" />

        <app.pachli.core.ui.ClickableSpanTextView
            android:id="@+id/aboutWebsiteInfoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lineSpacingMultiplier="1.2"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="@+id/aboutLicenseInfoTextView"
            app:layout_constraintStart_toStartOf="@+id/aboutLicenseInfoTextView"
            app:layout_constraintTop_toBottomOf="@id/aboutLicenseInfoTextView"
            tools:text="@string/about_project_site" />

        <app.pachli.core.ui.ClickableSpanTextView
            android:id="@+id/aboutBugsFeaturesInfoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/about_bug_feature_request_site"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="@+id/aboutWebsiteInfoTextView"
            app:layout_constraintStart_toStartOf="@+id/aboutWebsiteInfoTextView"
            app:layout_constraintTop_toBottomOf="@id/aboutWebsiteInfoTextView" />

        <Button
            android:id="@+id/appProfileButton"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lineSpacingMultiplier="1.2"
            android:maxWidth="320dp"
            android:text="@string/about_pachli_account"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/text_content_margin"
            app:layout_constraintStart_toStartOf="@+id/aboutBugsFeaturesInfoTextView"
            app:layout_constraintTop_toBottomOf="@id/aboutBugsFeaturesInfoTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
