<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2023 Pachli Association
  ~
  ~ This file is a part of Pachli.
  ~
  ~ This program is free software; you can redistribute it and/or modify it under the terms of the
  ~ GNU General Public License as published by the Free Software Foundation; either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ Pachli is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
  ~ Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with Pachli; if not,
  ~ see <http://www.gnu.org/licenses>.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/workers_prune_cached_media_help" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pruneCachedMediaWorkInfoRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pruneCachedMediaWorkerLogEntryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/workers_prune_cache_help" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pruneCacheWorkInfoRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pruneCacheWorkerLogEntryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/workers_prune_log_entry_entity_help" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pruneLogEntryWorkInfoRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pruneLogEntryWorkerLogEntryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
